name:                linklater-lambdabot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tumist/linklater-lambdabot#readme
license:             BSD3
license-file:        LICENSE
author:              Tumi Steingrímsson
maintainer:          tumi.st@gmail.com
copyright:           2017 Tumi Steingrímsson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable linklater-lambdabot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , network
                     , bytestring
                     , uri-bytestring
                     , text
                     , linklater
                     , websockets
                     , wuss
                     , lens
                     , aeson
                     , lambdabot-core
                     , lambdabot-haskell-plugins
                     , lambdabot-irc-plugins
                     , lambdabot-misc-plugins
                     , lambdabot-novelty-plugins
                     , lambdabot-reference-plugins
                     , lambdabot-social-plugins
                     , deepseq
                     , parsec
                     , silently
